<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#EBFDFBFB">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:alpha="100"
        android:background="@drawable/bar_color"
  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
     >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:text="Preferences"
                android:textStyle="italic"
                android:textColor="#fff"
                android:textSize="24dp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EBFDFBFB">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EBFDFBFB"
        >
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"


        >

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textStyle="bold"
            android:textColor="@color/Heading"
            android:layout_marginTop="3dp"
            android:layout_marginStart="6dp"/>
          <TextView
              android:id="@+id/minyear"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toLeftOf="@+id/maxyears"
              android:text="18-"
              android:textStyle="bold"
              android:layout_marginTop="3dp"
              android:textColor="@color/subTitle"
              android:layout_marginEnd="0dp"/>
        <TextView
            android:id="@+id/maxyears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="70 years"
            android:textStyle="bold"
            android:textColor="@color/subTitle"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="3dp"/>
        <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:mrb_pinColor="@color/switchcolor1"
            app:mrb_pinMaxFont="15sp"
            app:mrb_pinMinFont="12sp"
            app:mrb_pinRadius="12dp"
            android:layout_marginTop="29dp"
            app:mrb_rangeBar="true"
            app:mrb_rangeBarPaddingBottom="30dp"

             app:mrb_tickColor="@color/switchcolor1"
            app:mrb_tickLabelColor="@color/switchcolor1"
            app:mrb_selectorBoundaryColor="@color/switchcolor1"
            app:mrb_connectingLineColor="@color/switchcolor1"
            app:mrb_selectorColor="@color/switchcolor1"

            app:mrb_rangeBar_rounded="true"
            app:mrb_selectorBoundarySize="0dp"
            app:mrb_selectorSize="10dp"
            app:mrb_temporaryPins="true"
            app:mrb_tickDefaultLabel="label"
            app:mrb_tickEnd="70"

            app:mrb_tickHeight="0dp"
            app:mrb_tickInterval="1"

            app:mrb_rangeBarColor="@color/grayColor"
            app:mrb_tickLabelSize="3sp"
            app:mrb_tickStart="18" />

    </RelativeLayout>
</android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/para1"
        android:textColor="@color/textcolor"
        android:textSize="13sp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"/>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="12dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"

        android:elevation="20dp"

        >

        <TextView
            android:id="@+id/Interested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Interested In"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/Heading"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Interested"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-29dp"
            android:text="Men"
            android:textColor="@color/subTitle"/>


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/Menswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:theme="@style/SCBSwitch"
            android:layout_marginRight="4dp"
            android:checked="false"/>

        <TextView
            android:id="@+id/women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:text="Women"
            android:textColor="@color/subTitle" />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/Womenswitch"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="11dp"
            android:layout_alignParentBottom="true"
            android:theme="@style/SCBSwitch"
            android:layout_marginRight="4dp" />


    </RelativeLayout>
</android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:text="@string/para2"
        android:textColor="@color/textcolor"
        android:textSize="13sp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp"
            >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="0dp"


        >

        <TextView
            android:id="@+id/Alerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Alerts"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/Heading" />



        <TextView
            android:id="@+id/Sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:text="Sound"
            android:textColor="@color/subTitle" />
        <android.support.v7.widget.SwitchCompat

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="11dp"
            android:layout_alignParentBottom="true"
            android:theme="@style/SCBSwitch"
            android:layout_marginRight="4dp" />





    </RelativeLayout>
        </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/para3"
        android:textColor="@color/textcolor"
        android:textSize="13sp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-5dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="0dp"


        >

        <TextView
            android:id="@+id/Matchmaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Matchmaker- Only Mode"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/Heading" />



        <TextView
            android:id="@+id/HideMyProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:text="Hide My Profile"
            android:textColor="@color/subTitle" />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/soundPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="11dp"
            android:layout_alignParentBottom="true"
            android:theme="@style/SCBSwitch"
            android:layout_marginRight="4dp" />


    </RelativeLayout>
        </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/para4"
        android:textColor="@color/textcolor"
        android:textSize="13sp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-5dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="13dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="0dp"

          android:outlineProvider="bounds">


            <TextView
                android:id="@+id/Hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="26dp"

                android:text="Whitelist my app"
                android:textColor="@color/subTitle" />

            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="11dp"
                android:background="@drawable/buttonstyle"
                android:onClick="go"
                android:text="Go"
                android:textColor="#fff"
                android:textSize="20dp"
                android:theme="@style/SCBSwitch" />


        </RelativeLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/para5"
            android:textColor="@color/textcolor"
            android:textSize="13sp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="-5dp"/>
    </LinearLayout>

</ScrollView>
</LinearLayout>